assets/css/style.css
body{
    background-image: url("http://thechronicleherald.ca/sites/default/files/Tie%20Dye_1.jpg?1409833421");
}


header {
  border: 3px solid black;
  font-size:20px;
  text-align:center;
  margin:0px auto;
  height: 200px; 
  width:80%;
}

.underscore{
    border: 3px solid black;
    font-size:100px;
    text-align:center;
    margin:0px auto;
    height: 150px; 
    width:80%;
}

.rightGuess{
    border: 3px solid black;
    font-size:50px;
    text-align:center;
    margin:0px auto;
    height: 150px; 
    width:80%;

}

.wrongGuess{
    border: 3px solid black;
    font-size:50px;
    text-align:center;
    margin:0px auto;
    height: 150px; 
    width:80%;


}
#winCounter{
    border: 3px solid black;
    font-size:50px;
    text-align:center;
    margin:0px auto;
    height: 150px; 
    width:80%; 
}

#lossCounter{
    border: 3px solid black;
    font-size:50px;
    text-align:center;
    margin:0px auto;
    height: 150px; 
    width:80%;
}

